--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,30 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-analytics.js"></script>
+
+<!-- <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyAPRh6pyorUJUGh3NyjY5Ao2ZW7zrpf-Ow",
+    authDomain: "gymstatus-19a75.firebaseapp.com",
+    projectId: "gymstatus-19a75",
+    storageBucket: "gymstatus-19a75.appspot.com",
+    messagingSenderId: "211320929591",
+    appId: "1:211320929591:web:a6801187ac5c57bbba6eb2",
+    measurementId: "G-6VC0SNVK0E"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script> -->
 </head>
 
 <body>
